[project]
name = "langgraph-celery"
version = "0.1.0"
description = "Bridge between Celery workers and LangGraph agents"
readme = "README.md"
authors = [
    { name = "Charef", email = "ccherrad@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "celery>=5.6.3",
    "langgraph>=1.1.10",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.12",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
